# cmake-demo

./: CMakeLists.txt  build64.bat  common_values.cmd  configure.bat  configure32.bat  configure64.bat
app/: CMakeLists.txt  main.cpp
cmake/: disable-api.cmake
project-dll/: CMakeLists.txt  student-dll.cpp  student-dll.h  test.cmake
project-lib/: CMakeLists.txt  student.cpp
